# aswf-docker

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  azure-pipelines.yml  build-images.sh  build-packages.sh  build.sh  docker-bake-base-2018.hcl  docker-bake-base-2019.hcl  docker-bake-base-2020.hcl  docker-bake-common-1.hcl  docker-bake-settings.hcl  docker-bake-vfx-2018.hcl  docker-bake-vfx-2019.hcl  docker-bake-vfx-2020.hcl  download-package.sh  mypy.ini  pylintrc  pyproject.toml  setup.py  sonar-project.properties  versions.yaml
.azure/: azure-pipelines-release.yml  build-linux-docker-images.yml  build-linux-images.yml  build-linux-packages.yml  configure_vars.sh  free_disk_space.sh  get-docker-org.sh  prepare-docker.yml
.github/workflows/: docker-builds.yml  python-sonar.yml  python.yml  release.yml
.prospector/: aswfdocker.yaml
aswf-ocio-build/: Dockerfile
aswf-openvdb-build/: Dockerfile
aswf-vfx-base/: Dockerfile
ci-base/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-baseos-gl-conan/: Dockerfile  README.md  image.yaml
ci-baseqt/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-common/: Dockerfile  README.md  image.yaml
ci-imath/: Dockerfile  README.md  image.yaml
ci-materialx/: Dockerfile  README.md  image.yaml
ci-ocio/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-oiio/: Dockerfile  README.md  image.yaml
ci-opencue/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-openexr/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-openfx/: Dockerfile  README.md  image.yaml
ci-openrv/: Dockerfile  README.md  image.yaml
ci-openvdb/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-osl/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-otio/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-rawtoaces/: Dockerfile  README.md  image.yaml
ci-usd/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
ci-vfxall/: Dockerfile  README.md  Readme.md  data.yaml  image.yaml
python/: .coveragerc  Pipfile  README.md  setup.py
python/aswfdocker/: aswfinfo.py  builder.py  buildinfo.py  constants.py  dockergen.py  groupinfo.py  index.py  migrater.py  releaser.py  settings.py  utils.py  versioninfo.py
python/pyaswfdocker/: builder.py  (+4 more)
rt-base/: Dockerfile  xorg.conf  xpra-entry-point.sh  xpra.conf
rt-vfxall/: Dockerfile
rt-vfxall-jupyter/: Dockerfile  jupyter-entry-point.sh  jupyter_notebook_config.py
scripts/: install_blosc.sh  install_boost.sh  install_clang.sh  install_cmake.sh  install_cppunit.sh  install_glew.sh  install_log4cplus.sh  install_ninja.sh  install_python.sh  install_tbb.sh
(+103 files in other folders)
